[project]
name = "langgraph-langchain-course"
version = "0.1.0"
description = "The OG ReAct Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "langchain-classic>=1.0.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langchain-tavily>=0.2.16",
    "python-dotenv>=1.2.1",
]
